<resources>
    <string name="app_name">Cadastro Aluno</string>

    <string name="action_settings">Settings</string>

    <string name="nome_aluno"> Informe o nome do aluno</string>
    <string name="add_aluno">Adicionar Aluno</string>

    <string name="fotos">Fotos</string>
    <string name="nome">Nome</string>
    <string name="tel">Telefone</string>
    <string name="info_tel"> Informe o telefone do aluno</string>
    <string name="ende">Endereço</string>
    <string name="info_ende"> Informe o Endereço</string>
    <string name="site">Site</string>
    <string name="inf_site"> Informe o Site</string>
    <string name="email">E-mail</string>
    <string name="inf_email"> Informe E-mail</string>
    <string name="notas">Notas</string>
    <string name="salva_dados">Salvar Dados</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_formulario">Formulario</string>

    <!-- String para itens do menu-->
    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="mais_opcao">Mais Opções</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="provas">Provas</string>
    <string name="preferencias">Preferências</string>

    <!-- String para o menu de contexto -->
    <string name="ligar">LIgar</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="acharNoMapa">Achar no Mapa</string>
    <string name="navegarSite">Navegar no Site</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="deletar">Deletar</string>

</resources>
