<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.danielandre.cadastroaluno.Formulario">

    <!-- android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_aluno"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no_image"
            android:contentDescription="@string/fotos"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/tvNome"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="5dp" />
        <EditText
            android:id="@+id/edNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_aluno"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:inputType="none">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:id="@+id/tvFone"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp" />
        <EditText
            android:id="@+id/edFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/info_tel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:inputType="phone">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/tvEmail"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inf_email"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:id="@+id/tvSite"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp" />
        <EditText
            android:id="@+id/edSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inf_site"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:inputType="textWebEditText">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ende"
            android:id="@+id/tvEnde"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edEnde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/info_ende"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notas"
            android:id="@+id/tvNota"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbNotas"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:max="10"
            android:layout_marginTop="1dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/salva_dados"
            android:id="@+id/sbSalvar"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
